# wyoming-parakeet-addon-haos

./: README.md  repository.yaml
wyoming_parakeet_npu/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  blobs.json  config.yaml  run.sh
wyoming_parakeet_npu/parakeet/: LICENSE  VENDORED.md  docker-entrypoint.sh  pyproject.toml
wyoming_parakeet_npu/parakeet/scripts/: bootstrap.py
wyoming_parakeet_npu/parakeet/src/wyoming_parakeet_npu/: __init__.py  __main__.py  handler.py  script_mask.py  shims.py
wyoming_parakeet_npu/translations/: en.yaml
wyoming_silero_tts/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml  run.sh
wyoming_silero_tts/silero/: LICENSE  docker-entrypoint.sh  pyproject.toml
wyoming_silero_tts/silero/scripts/: bootstrap.py
wyoming_silero_tts/silero/src/wyoming_silero_tts/: __init__.py  __main__.py  handler.py  normalize.py
wyoming_silero_tts/silero/src/wyoming_silero_tts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wyoming_silero_tts/translations/: en.yaml
