[project]
name = "wyoming-parakeet-on-intel-npu"
version = "0.1.0"
description = "Wyoming protocol STT server running Parakeet TDT 0.6B v3 on Intel NPU via OpenVINO"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Miguel Camba" }]
keywords = ["wyoming", "speech-to-text", "parakeet", "intel-npu", "openvino", "asr", "home-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "openvino>=2025.0",
    "onnxruntime==1.26.0",
    "onnx-asr[hub]>=0.5",
    "wyoming==1.7.2",
    "soundfile",
    "numpy",
    "huggingface_hub",
]

[project.urls]
Homepage = "https://github.com/cibernox/wyoming-parakeet-on-intel-npu"
Issues = "https://github.com/cibernox/wyoming-parakeet-on-intel-npu/issues"

[project.scripts]
wyoming-parakeet-npu = "wyoming_parakeet_npu.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
