[project]
name = "wyoming-silero-tts"
version = "1.0.0"
description = "Wyoming protocol TTS server running Silero v5 Russian voices on CPU"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mikhail Ganiushin" }]
keywords = ["wyoming", "text-to-speech", "silero", "tts", "russian", "home-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    # torch is installed from the PyTorch CPU wheel index in the Dockerfile
    # (pinned there to 2.8.0); the loose bound here only keeps local dev sane.
    "torch>=2.6,<3",
    "wyoming==1.7.2",
    # The Russian Silero model silently drops digits; num2words expands them.
    "num2words==0.5.14",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/ganiushin/wyoming-parakeet-addon-haos"
Issues = "https://github.com/ganiushin/wyoming-parakeet-addon-haos/issues"

[project.scripts]
wyoming-silero-tts = "wyoming_silero_tts.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
